clang/test/BSC/Negative/InitAnalysis/init-multiple-vars.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test: multiple variables with different initialization states.

_Safe void test_multiple_uninit(void) {
    int a;
    int b;
    int c = a; // expected-error {{use of uninitialized value: `a`}}
    int d = b; // expected-error {{use of uninitialized value: `b`}}
}

_Safe void test_mixed_init(int cond) {
    int a = 1;
    int b;
    if (cond)
        b = 2;
    int c = b; // expected-error {{use of possibly uninitialized value: `b`}}
}
